--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,13 +27,13 @@ mime = "0.3.16"
 readable-readability = "0.4.0"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
-sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-native-tls", "uuid"] }
+sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-native-tls", "uuid", "time"] }
 tantivy = "0.19.1"
 tempfile = "3.3.0"
 termimad = "0.20.6"
 textwrap = "0.16.0"
 thiserror = "1.0.38"
-time = { version = "0.3.17", features = ["macros", "std", "formatting", "local-offset"] }
+time = { version = "0.3.17", features = ["macros", "std", "formatting", "local-offset", "serde-human-readable"] }
 tokio = { version = "1.24.1", features = ["full"] }
 tokio-stream = { version = "*", features = ["fs"] }
 toml = "0.5.10"
