Clean up before publishing
FossilOrigin-Name: f22ed093bc5812ce1538257239e40e0a95afc6292d94c75b3066ce910e0cc100

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 license = "Apache-2.0 OR MIT"
 repository = "https://jirijakes.com/code/seen"
 description = "Store and search through the content you have seen."
+categories = ["command-line-utilities"]
+keywords = ["cli", "web", "archive", "search", "index"]
 
 [dependencies]
 chromiumoxide = { version = "0.4.0", default-features = false, features = ["tokio-runtime"] }
