--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ repository = "https://jirijakes.com/code/seen"
 description = "Store and search through the content you have seen."
 categories = ["command-line-utilities"]
 keywords = ["cli", "web", "archive", "search", "index"]
+exclude = ["Makefile"]
 
 [dependencies]
 chromiumoxide = { version = "0.4.0", default-features = false, features = ["tokio-runtime"] }
