--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ textwrap = "0.16.0"
 thiserror = "1.0.38"
 time = { version = "0.3.17", features = ["macros", "std", "formatting", "local-offset", "serde-human-readable"] }
 tokio = { version = "1.24.1", features = ["full"] }
-tokio-stream = { version = "*", features = ["fs"] }
+tokio-stream = { version = "0.1.11", features = ["fs"] }
 toml = "0.5.10"
 typetag = "0.2.5"
 uuid = "1.2.2"
