--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "seen"
-version = "0.1.0-alpha.1"
+version = "0.1.0-alpha.2"
 edition = "2021"
 license = "Apache-2.0 OR MIT"
 repository = "https://jirijakes.com/code/seen"
@@ -23,7 +23,7 @@ mime = "0.3.16"
 readable-readability = "0.4.0"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
-sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-native-tls", "uuid", "time"] }
+sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-native-tls", "uuid", "time", "offline"] }
 tantivy = "0.19.1"
 tempfile = "3.3.0"
 termimad = "0.20.6"
