--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ directories = "4.0.1"
 futures = "0.3.25"
 html2text = "0.4.5"
 http-serde = "1.1.2"
+indicatif = "0.17.3"
 isahc = "1.7.2"
 miette = { version = "5.5.0", features = ["fancy"] }
 mime = "0.3.16"
