--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ exclude = ["Makefile"]
 
 [dependencies]
 chromiumoxide = { version = "0.4.0", default-features = false, features = ["tokio-runtime"] }
+chrono = { version = "0.4.23", features = ["serde"] }
 clap = { version = "4.1.1", features = ["derive"] }
 comfy-table = "6.1.4"
 directories = "4.0.1"
@@ -24,13 +25,12 @@ mime = "0.3.16"
 readable-readability = "0.4.0"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.91"
-sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-native-tls", "uuid", "time", "offline"] }
+sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-native-tls", "uuid", "chrono", "offline"] }
 tantivy = "0.19.1"
 tempfile = "3.3.0"
 termimad = "0.20.6"
 textwrap = "0.16.0"
 thiserror = "1.0.38"
-time = { version = "0.3.17", features = ["macros", "std", "formatting", "local-offset", "serde-human-readable"] }
 tokio = { version = "1.24.2", features = ["full"] }
 tokio-stream = { version = "0.1.11", features = ["fs"] }
 toml = "0.5.11"
